--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,10 @@ version = "0.1.0"
 description = "Hridayangam Logger"
 readme = "README.md"
 requires-python = ">=3.12"
-dependencies = []
+dependencies = [
+    "logfire>=0.53.0",
+    "structlog>=24.4.0",
+]
 
 [build-system]
 requires = ["hatchling"]
